# thedebrief

./: .env.example  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: config.py  dependencies.py  main.py
app/graphs/: edges.py  root.py  tools.py
app/graphs/correspondent/: graph.py  nodes.py  tools.py
app/graphs/director/: edges.py  graph.py  nodes.py  state.py  tools.py
app/graphs/herald/: edges.py  graph.py  nodes.py  states.py
app/graphs/librarian/: graph.py  nodes.py  tools.py
app/graphs/persona/: edges.py  graph.py  nodes.py  states.py  tools.py
app/models/: custom_operators.py  state.py
app/services/: audio_merger.py  audio_storage.py  llm.py  news.py  retry.py  tts.py  web_search.py
data/: rss_feeds.csv
prompts/correspondent/: context_extractor.md
prompts/herald/: article_selection.md
prompts/librarian/: get_relevant_sources.md
prompts/persona/: persona_router.md
prompts/persona/critic/: desc.md  doc.md
prompts/persona/economist/: desc.md  doc.md
prompts/persona/geopolitician/: desc.md  doc.md
prompts/persona/historian/: desc.md  doc.md
prompts/persona/lawyer/: desc.md  doc.md
prompts/persona/politician/: desc.md  doc.md
prompts/persona/scientist/: desc.md  doc.md
prompts/persona/socialite/: desc.md  doc.md
prompts/persona/tech_analyst/: desc.md  doc.md
prompts/tts/: anchor_generator.md  deep_dive.md  deep_dive_generator.md  highlights.md
