[project]
name = "thedebrief"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "asyncio-throttle>=1.0.2",
    "cloudinary>=1.44.2",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "google-api-core>=2.30.3",
    "langchain-google-genai>=4.2.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.0",
    "newspaper4k>=0.9.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "pyloudnorm>=0.2.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "tavily>=1.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
